# swap-it-registry-module

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  build_from_scratch.html  contact.html  deploy_from_docker.html  filter.html  genindex.html  getting_started.html  glossary.html  index.html  main.c  objects.inv  register.html  related_projects.html  search.html  searchindex.js  swap-it-architecture.html  tutorials.html  unregister.html
.github/workflows/: build_and_deploy_documentation.yml  coverage_tests.yml  unit_tests.yml
_sources/: build_from_scratch.rst.txt  contact.rst.txt  getting_started.rst.txt  index.rst.txt  register.rst.txt  related_projects.rst.txt  tutorials.rst.txt  unregister.rst.txt
documentation/source/: conf.py  deploy_from_docker.rst  filter.rst  glossary.rst  index.rst  swap-it-architecture.rst  tutorials.rst
include/: registry_module_callback_functions.h  registry_module_capability_matching_functions.h  registry_module_clear.h  registry_module_client_interface.h  registry_module_config_parse.h  registry_module_init.h  registry_module_internal.h  registry_module_namespace_solver.h  registry_module_node_iterator.h  registry_module_register_agent.h  registry_module_synchronization.h
src/: registry_module_callback_functions.c  registry_module_capability_matching_functions.c  registry_module_clear.c  registry_module_client_interface.c  registry_module_config_parse.c  registry_module_init.c  registry_module_internal.c  registry_module_namespace_solver.c  registry_module_node_iterator.c  registry_module_register_agent.c  registry_module_synchronization.c
tests/: check_register_module_unregister_agent.c  check_registry_module_configs.c  check_registry_module_filter_agents.c  check_registry_module_method_call.c  check_registry_module_register_agent.c  check_registry_module_structure.c  check_registry_module_synchronization.c
tests/InformationModels/: DemoScenarioTypes.ModelDesign.xml  DemoScenarioWarehouse.ModelDesign.csv  DemoScenarioWarehouse.ModelDesign.xml  SWAP.Fraunhofer.Demo.Scenario.Warehouse.Model.NodeSet2.xml
tests/configs/: config_empty.json5  config_incomplete.json5  config_valid.json5  warehouse.json5  warehouse_1.json5  warehouse_2.json5  warehouse_3.json5  warehouse_4.json5
tests/include/: evaluate_test_results.h  start_client.h  start_registry_module.h  start_swap_server.h
tests/src/: evaluate_test_results.c  start_client.c  start_registry_module.c  start_swap_server.c
tests/unit_tests/: CMakeLists.txt
tutorials/: CMakeLists.txt
tutorials/filter/: capability_filtering.c  filter.c  service_filtering.c
tutorials/register/: register_manually.c
tutorials/unregister/: unregister.c
